done upto portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,18 @@ body {
   background-size: cover;
   color: white;
 }
+
+#what-we-do {
+  text-align: center;
+}
+
+.container {
+  max-width: 75%;
+}
+
+#contact-us {
+  background-image: url("../img/backgrounds/c_image.jpg");
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
